<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>715</width>
    <height>461</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Show Settings</string>
  </property>
  <property name="windowOpacity">
   <double>0.900000000000000</double>
  </property>
  <property name="sizeGripEnabled">
   <bool>true</bool>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Output Format:</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="txtMSOutFormat">
       <property name="text">
        <string>./%t (%y)/%t (%y).%x</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>Preview:</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="txtMSPreview">
       <property name="enabled">
        <bool>false</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Syntax:</string>
     </property>
     <property name="flat">
      <bool>false</bool>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QTableWidget" name="tableWidget">
        <property name="editTriggers">
         <set>QAbstractItemView::NoEditTriggers</set>
        </property>
        <property name="tabKeyNavigation">
         <bool>false</bool>
        </property>
        <property name="showDropIndicator" stdset="0">
         <bool>false</bool>
        </property>
        <property name="selectionMode">
         <enum>QAbstractItemView::NoSelection</enum>
        </property>
        <property name="showGrid">
         <bool>false</bool>
        </property>
        <property name="gridStyle">
         <enum>Qt::NoPen</enum>
        </property>
        <property name="wordWrap">
         <bool>false</bool>
        </property>
        <property name="rowCount">
         <number>10</number>
        </property>
        <property name="columnCount">
         <number>3</number>
        </property>
        <attribute name="horizontalHeaderVisible">
         <bool>false</bool>
        </attribute>
        <attribute name="horizontalHeaderCascadingSectionResizes">
         <bool>false</bool>
        </attribute>
        <attribute name="horizontalHeaderDefaultSectionSize">
         <number>32</number>
        </attribute>
        <attribute name="horizontalHeaderStretchLastSection">
         <bool>true</bool>
        </attribute>
        <attribute name="verticalHeaderVisible">
         <bool>false</bool>
        </attribute>
        <attribute name="verticalHeaderMinimumSectionSize">
         <number>20</number>
        </attribute>
        <attribute name="verticalHeaderDefaultSectionSize">
         <number>20</number>
        </attribute>
        <row/>
        <row/>
        <row/>
        <row/>
        <row/>
        <row/>
        <row/>
        <row/>
        <row/>
        <row/>
        <column/>
        <column/>
        <column/>
        <item row="0" column="0">
         <property name="text">
          <string>%n</string>
         </property>
        </item>
        <item row="0" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="0" column="2">
         <property name="text">
          <string>Show Name</string>
         </property>
        </item>
        <item row="1" column="0">
         <property name="text">
          <string>%t</string>
         </property>
        </item>
        <item row="1" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="1" column="2">
         <property name="text">
          <string>Episode Title</string>
         </property>
        </item>
        <item row="2" column="0">
         <property name="text">
          <string>%s</string>
         </property>
        </item>
        <item row="2" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="2" column="2">
         <property name="text">
          <string>Season Number</string>
         </property>
        </item>
        <item row="3" column="0">
         <property name="text">
          <string>%0s</string>
         </property>
        </item>
        <item row="3" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="3" column="2">
         <property name="text">
          <string>Season Number, Zero Padded [01, 02...]</string>
         </property>
        </item>
        <item row="4" column="0">
         <property name="text">
          <string>%00s</string>
         </property>
        </item>
        <item row="4" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="4" column="2">
         <property name="text">
          <string>Season Number, Zero Padded [001, 002...]</string>
         </property>
        </item>
        <item row="5" column="0">
         <property name="text">
          <string>%e</string>
         </property>
        </item>
        <item row="5" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="5" column="2">
         <property name="text">
          <string>Episode Number</string>
         </property>
        </item>
        <item row="6" column="0">
         <property name="text">
          <string>%0e</string>
         </property>
        </item>
        <item row="6" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="6" column="2">
         <property name="text">
          <string>Episode Number, Zero Padded [01, 02...]</string>
         </property>
        </item>
        <item row="7" column="0">
         <property name="text">
          <string>%00e</string>
         </property>
        </item>
        <item row="7" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="7" column="2">
         <property name="text">
          <string>Episode Number, Zero Padded [001, 002...]</string>
         </property>
        </item>
        <item row="8" column="0">
         <property name="text">
          <string>%y</string>
         </property>
        </item>
        <item row="8" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="8" column="2">
         <property name="text">
          <string>First Air Year</string>
         </property>
        </item>
        <item row="9" column="0">
         <property name="text">
          <string>%x</string>
         </property>
        </item>
        <item row="9" column="1">
         <property name="text">
          <string>-</string>
         </property>
        </item>
        <item row="9" column="2">
         <property name="text">
          <string>File Extension</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Example: ./%n (%y)/Season %0s/%n (%y) - S%0sE%0e - %t.%x</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>Dialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>Dialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
